fixed some spacing in the about me section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,12 @@ footer {
     background-color: rgba(255,255,255,.95);
     border-radius: 10px;
 }
+.about-me h1 {
+    padding-bottom: 20px;
+}
 .about-me img {
+    position: relative;
+    top: 15px;
     width: 200px;
     height: 150px;
     float: left;
@@ -86,6 +91,5 @@ footer {
     left: 20px;
     right: 20px;
     line-height: 2;
-    margin: 20px;
-    margin-left: 0px;
+    margin: 0px 20px 20px 0px;
 }
